--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,14 @@ nav > ul > li > a:hover {
     padding-left: 50px;
 }
 
+.menu_btn {
+    cursor: pointer;
+    position: absolute;
+    top: 30px;
+    z-index: 2;
+    display: none;
+}
+
 .btn {
     cursor: pointer;
     border: 0;
@@ -249,7 +257,7 @@ nav > ul > li > a:hover {
 
   
 .card_container {
-    width: 1100;
+    width: 1100px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     padding-top: 56px;
@@ -444,3 +452,119 @@ nav > ul > li > a:hover {
     line-height: 27px;
 }
 /* footer */
+
+/* media query */
+/* On screens that are 700px or less(below) */
+@media(max-width: 700px){
+    .top_container {
+        width: 50%;
+    }
+
+    .top_container ul .left_nav, .top_container ul .right_nav {
+        display: none;
+    }
+
+    .top_container ul .left_nav, .top_container ul .right_nav{
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0;
+        padding-bottom: 20px;
+    }
+
+    .menu_btn {
+        display: block;
+    }
+
+    .menu_btn:hover {
+        opacity: 0.5;
+    }
+
+    .header_lower > h1 {
+        font-size: 48px;
+    }
+
+    .about_title, .folio_card > h2, .test_title, .cta_text > h2 {
+        font-size: 38px;
+    }
+
+    .partners > p {
+        font-size: 14px;
+        line-height: 22px;
+    }
+
+    .logos {
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .action {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .upper_footer {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .copyright_items {
+        display: flex;
+        flex-wrap: wrap;
+    }
+}
+
+
+/* On screens that are 500px or less */
+@media(max-width: 500px){
+    * p {
+        font-size: 14px;
+    }
+
+    .header_lower > h1 {
+        font-size: 38px;
+    }
+
+    .about_title, .folio_card > h2, .test_title, .cta_text > h2 {
+        font-size: 24px;
+        text-align: left;
+        padding-top: 200px;
+    }
+
+    .btn_btn {
+        width: 85px;
+        height: 40px;
+        font-size: 14px;
+    }
+
+    .header_lower > p {
+        display: none;
+    }
+
+    .logos {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+
+    .folio_card > p {
+        font-size: 16px;
+    }
+
+    .card_container {
+        width: 100%;
+        display: grid;
+        grid-template-columns: 1fr;
+        padding-bottom: 300px;
+    }
+
+    .upper_footer {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+
+    .upper_footer ul {
+        margin-bottom: 30px;
+    }
+}
+/* media query */
